--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 	<link rel="skyleshit" href="css/style.css">
 </head>
 <body>
-	<h1>site here</h1>
-	<p>some text</p>
-	<p>la la la</p>
+	<p>adfhadfhafd h afhadfhadfhadfh dfadfghadfhadfhadfh adfhdfhadfhadfhsdfhafdhadfhadfhadfhadfhafdh afdhadfhadfhadfhadfhdfhdfhfd </p>
 
 <\body>
 </html>		
